src/test/ui/consts/const_in_pattern/issue-65466.stderr
error: `&[O<B>]` must implement `PartialEq` to be used in a pattern
  --> $DIR/issue-65466.rs:18:9
   |
LL |         C => (),
   |         ^

error: aborting due to previous error

